// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner examples DefaultInfoBannerBannerComponent should render correctly 1`] = `
<div
  id="root6"
>
  <div
    class="v-banner v-message"
    messagetype="information"
    v-banner=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="v-message-icon v-icon v-icon-information v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      id="a-v__icon__internal-3"
      role="img"
      v-icon-visa-information-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M15 19H9V17.0351H11.451V12.9874H9.43137V11.0225H13.4118V17.0351H15V19ZM12 9.53895C10.7549 9.53895 9.73529 8.51719 9.73529 7.26947C9.73529 6.02175 10.7549 5 12 5C13.2549 5 14.2647 6.02175 14.2647 7.26947C14.2647 8.51719 13.2549 9.53895 12 9.53895ZM12 6.96491C11.8333 6.96491 11.6961 7.10246 11.6961 7.26947C11.6961 7.43649 11.8333 7.57403 12 7.57403C12.1667 7.57403 12.3039 7.43649 12.3039 7.26947C12.3039 7.10246 12.1667 6.96491 12 6.96491Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the banner in more detail.
      </p>
    </div>
    <button
      aria-label="close"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-16 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-16"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        id="a-v__icon__internal-4"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Banner examples DefaultInfoBannerWithPersistentComponent should render correctly 1`] = `
<div
  id="root4"
>
  <div
    class="v-banner v-message"
    messagetype="information"
    v-banner=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="v-message-icon v-icon v-icon-information v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      id="a-v__icon__internal-0"
      role="img"
      v-icon-visa-information-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M15 19H9V17.0351H11.451V12.9874H9.43137V11.0225H13.4118V17.0351H15V19ZM12 9.53895C10.7549 9.53895 9.73529 8.51719 9.73529 7.26947C9.73529 6.02175 10.7549 5 12 5C13.2549 5 14.2647 6.02175 14.2647 7.26947C14.2647 8.51719 13.2549 9.53895 12 9.53895ZM12 6.96491C11.8333 6.96491 11.6961 7.10246 11.6961 7.26947C11.6961 7.43649 11.8333 7.57403 12 7.57403C12.1667 7.57403 12.3039 7.43649 12.3039 7.26947C12.3039 7.10246 12.1667 6.96491 12 6.96491Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the banner in more detail.
      </p>
    </div>
  </div>
</div>
`;

exports[`Banner examples DefaultInfoBannerWithTitleComponent should render correctly 1`] = `
<div
  id="root5"
>
  <div
    class="v-banner v-message"
    messagetype="information"
    v-banner=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="v-message-icon v-icon v-icon-information v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      id="a-v__icon__internal-1"
      role="img"
      v-icon-visa-information-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M15 19H9V17.0351H11.451V12.9874H9.43137V11.0225H13.4118V17.0351H15V19ZM12 9.53895C10.7549 9.53895 9.73529 8.51719 9.73529 7.26947C9.73529 6.02175 10.7549 5 12 5C13.2549 5 14.2647 6.02175 14.2647 7.26947C14.2647 8.51719 13.2549 9.53895 12 9.53895ZM12 6.96491C11.8333 6.96491 11.6961 7.10246 11.6961 7.26947C11.6961 7.43649 11.8333 7.57403 12 7.57403C12.1667 7.57403 12.3039 7.43649 12.3039 7.26947C12.3039 7.10246 12.1667 6.96491 12 6.96491Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <h4
        class="v-typography-body-2-bold"
        vtypography="body-2-bold"
      >
        Informational title
      </h4>
      <p>
        This is required text that describes the banner in more detail.
      </p>
    </div>
    <button
      aria-label="close"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-16 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-16"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        id="a-v__icon__internal-2"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Banner examples EmptyErrorBannerComponent should render correctly 1`] = `
<div
  id="root0"
>
  <div
    class="v-banner v-message v-message-error"
    messagetype="error"
    v-banner=""
    v-message=""
  />
</div>
`;

exports[`Banner examples EmptyInfoBannerComponent should render correctly 1`] = `
<div
  id="root1"
>
  <div
    class="v-banner v-message"
    messagetype="information"
    v-banner=""
    v-message=""
  />
</div>
`;

exports[`Banner examples EmptySuccessBannerComponent should render correctly 1`] = `
<div
  id="root2"
>
  <div
    class="v-banner v-message v-message-success"
    messagetype="success"
    v-banner=""
    v-message=""
  />
</div>
`;

exports[`Banner examples EmptyWarningBannerComponent should render correctly 1`] = `
<div
  id="root3"
>
  <div
    class="v-banner v-message v-message-warning"
    messagetype="warning"
    v-banner=""
    v-message=""
  />
</div>
`;

exports[`Banner examples ErrorBannerBannerComponent should render correctly 1`] = `
<div
  id="root11"
>
  <div
    class="v-banner v-message v-message-error"
    messagetype="error"
    v-banner=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="v-message-icon v-icon v-icon-error v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      id="a-v__icon__internal-12"
      role="img"
      v-icon-visa-error-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11 6V14H13V6H11ZM12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the banner in more detail.
      </p>
    </div>
    <button
      aria-label="close"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-16 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-16"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        id="a-v__icon__internal-13"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Banner examples ErrorBannerWithActionButtonBannerComponent should render correctly 1`] = `
<div
  id="root9"
>
  <div
    class="v-banner v-message v-message-error"
    messagetype="error"
    v-banner=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="v-message-icon v-icon v-icon-error v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      id="a-v__icon__internal-8"
      role="img"
      v-icon-visa-error-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11 6V14H13V6H11ZM12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the banner in more detail.
      </p>
      <button
        buttoncolor="secondary"
        class="v-button v-button-secondary v-mt-8"
        type="button"
        v-button=""
        vmt="8"
      >
        Primary action
      </button>
    </div>
    <button
      aria-label="close"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-16 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-16"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        id="a-v__icon__internal-9"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Banner examples ErrorBannerWithLinkBannerComponent should render correctly 1`] = `
<div
  id="root10"
>
  <div
    class="v-banner v-message v-message-error"
    messagetype="error"
    v-banner=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="v-message-icon v-icon v-icon-error v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      id="a-v__icon__internal-10"
      role="img"
      v-icon-visa-error-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11 6V14H13V6H11ZM12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p
        class="v-pb-8"
        vpb="8"
      >
        This is required text that describes the banner in more detail.
      </p>
      <a
        href="./components/banner"
        vlink=""
      >
        Destination label
      </a>
    </div>
    <button
      aria-label="close"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-16 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-16"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        id="a-v__icon__internal-11"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Banner examples ErrorPersistentBannerComponent should render correctly 1`] = `
<div
  id="root7"
>
  <div
    class="v-banner v-message v-message-error"
    messagetype="error"
    v-banner=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="v-message-icon v-icon v-icon-error v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      id="a-v__icon__internal-5"
      role="img"
      v-icon-visa-error-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11 6V14H13V6H11ZM12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the banner in more detail.
      </p>
    </div>
  </div>
</div>
`;

exports[`Banner examples ErrorTitleBannerComponent should render correctly 1`] = `
<div
  id="root8"
>
  <div
    class="v-banner v-message v-message-error"
    messagetype="error"
    v-banner=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="v-message-icon v-icon v-icon-error v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      id="a-v__icon__internal-6"
      role="img"
      v-icon-visa-error-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11 6V14H13V6H11ZM12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <h4
        class="v-typography-body-2-bold"
        vtypography="body-2-bold"
      >
        Error title
      </h4>
      <p>
        This is required text that describes the banner in more detail.
      </p>
    </div>
    <button
      aria-label="close"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-16 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-16"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        id="a-v__icon__internal-7"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Banner examples InfoBannerWithActionButtonBannerComponent should render correctly 1`] = `
<div
  id="root12"
>
  <div
    class="v-banner v-message"
    messagetype="information"
    v-banner=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="v-message-icon v-icon v-icon-information v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      id="a-v__icon__internal-14"
      role="img"
      v-icon-visa-information-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M15 19H9V17.0351H11.451V12.9874H9.43137V11.0225H13.4118V17.0351H15V19ZM12 9.53895C10.7549 9.53895 9.73529 8.51719 9.73529 7.26947C9.73529 6.02175 10.7549 5 12 5C13.2549 5 14.2647 6.02175 14.2647 7.26947C14.2647 8.51719 13.2549 9.53895 12 9.53895ZM12 6.96491C11.8333 6.96491 11.6961 7.10246 11.6961 7.26947C11.6961 7.43649 11.8333 7.57403 12 7.57403C12.1667 7.57403 12.3039 7.43649 12.3039 7.26947C12.3039 7.10246 12.1667 6.96491 12 6.96491Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the banner in more detail.
      </p>
      <button
        buttoncolor="secondary"
        class="v-button v-button-secondary v-mt-8"
        type="button"
        v-button=""
        vmt="8"
      >
        Primary action
      </button>
    </div>
    <button
      aria-label="close"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-16 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-16"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        id="a-v__icon__internal-15"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Banner examples InfoBannerWithLinkBannerComponent should render correctly 1`] = `
<div
  id="root13"
>
  <div
    class="v-banner v-message"
    messagetype="information"
    v-banner=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="v-message-icon v-icon v-icon-information v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      id="a-v__icon__internal-16"
      role="img"
      v-icon-visa-information-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M15 19H9V17.0351H11.451V12.9874H9.43137V11.0225H13.4118V17.0351H15V19ZM12 9.53895C10.7549 9.53895 9.73529 8.51719 9.73529 7.26947C9.73529 6.02175 10.7549 5 12 5C13.2549 5 14.2647 6.02175 14.2647 7.26947C14.2647 8.51719 13.2549 9.53895 12 9.53895ZM12 6.96491C11.8333 6.96491 11.6961 7.10246 11.6961 7.26947C11.6961 7.43649 11.8333 7.57403 12 7.57403C12.1667 7.57403 12.3039 7.43649 12.3039 7.26947C12.3039 7.10246 12.1667 6.96491 12 6.96491Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p
        class="v-pb-8"
        vpb="8"
      >
        This is required text that describes the banner in more detail.
      </p>
      <a
        href="./components/banner"
        vlink=""
      >
        Destination label
      </a>
    </div>
    <button
      aria-label="close"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-16 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-16"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        id="a-v__icon__internal-17"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Banner examples SuccessBannerBannerComponent should render correctly 1`] = `
<div
  id="root18"
>
  <div
    class="v-banner v-message v-message-success"
    messagetype="success"
    v-banner=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="v-message-icon v-icon v-icon-low v-icon-success v-icon-visa"
      focusable="false"
      height="24"
      id="a-v__icon__internal-25"
      role="img"
      v-icon-visa-success-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M10.5726 14.2094L8.36276 11.9469L7 13.3422L10.5726 17L18 9.39529L16.6372 8L10.5726 14.2094Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C5.38317 0 0 5.38317 0 12C0 18.6168 5.38317 24 12 24C18.6168 24 24 18.6168 24 12C24 5.38317 18.6168 0 12 0ZM12 21.8182C6.58647 21.8182 2.18182 17.4141 2.18182 12C2.18182 6.58647 6.58647 2.18182 12 2.18182C17.4141 2.18182 21.8182 6.58647 21.8182 12C21.8182 17.4141 17.4141 21.8182 12 21.8182Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the banner in more detail.
      </p>
    </div>
    <button
      aria-label="close"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-16 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-16"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        id="a-v__icon__internal-26"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Banner examples SuccessBannerWithActionButtonBannerComponent should render correctly 1`] = `
<div
  id="root16"
>
  <div
    class="v-banner v-message v-message-success"
    messagetype="success"
    v-banner=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="v-message-icon v-icon v-icon-low v-icon-success v-icon-visa"
      focusable="false"
      height="24"
      id="a-v__icon__internal-21"
      role="img"
      v-icon-visa-success-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M10.5726 14.2094L8.36276 11.9469L7 13.3422L10.5726 17L18 9.39529L16.6372 8L10.5726 14.2094Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C5.38317 0 0 5.38317 0 12C0 18.6168 5.38317 24 12 24C18.6168 24 24 18.6168 24 12C24 5.38317 18.6168 0 12 0ZM12 21.8182C6.58647 21.8182 2.18182 17.4141 2.18182 12C2.18182 6.58647 6.58647 2.18182 12 2.18182C17.4141 2.18182 21.8182 6.58647 21.8182 12C21.8182 17.4141 17.4141 21.8182 12 21.8182Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the banner in more detail.
      </p>
      <button
        buttoncolor="secondary"
        class="v-button v-button-secondary v-mt-8"
        type="button"
        v-button=""
        vmt="8"
      >
        Primary action
      </button>
    </div>
    <button
      aria-label="close"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-16 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-16"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        id="a-v__icon__internal-22"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Banner examples SuccessBannerWithLinkBannerComponent should render correctly 1`] = `
<div
  id="root17"
>
  <div
    class="v-banner v-message v-message-success"
    messagetype="success"
    v-banner=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="v-message-icon v-icon v-icon-low v-icon-success v-icon-visa"
      focusable="false"
      height="24"
      id="a-v__icon__internal-23"
      role="img"
      v-icon-visa-success-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M10.5726 14.2094L8.36276 11.9469L7 13.3422L10.5726 17L18 9.39529L16.6372 8L10.5726 14.2094Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C5.38317 0 0 5.38317 0 12C0 18.6168 5.38317 24 12 24C18.6168 24 24 18.6168 24 12C24 5.38317 18.6168 0 12 0ZM12 21.8182C6.58647 21.8182 2.18182 17.4141 2.18182 12C2.18182 6.58647 6.58647 2.18182 12 2.18182C17.4141 2.18182 21.8182 6.58647 21.8182 12C21.8182 17.4141 17.4141 21.8182 12 21.8182Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p
        class="v-pb-8"
        vpb="8"
      >
        This is required text that describes the banner in more detail.
      </p>
      <a
        href="./components/banner"
        vlink=""
      >
        Destination label
      </a>
    </div>
    <button
      aria-label="close"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-16 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-16"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        id="a-v__icon__internal-24"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Banner examples SuccessPersistentBannerComponent should render correctly 1`] = `
<div
  id="root14"
>
  <div
    class="v-banner v-message v-message-success"
    messagetype="success"
    v-banner=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="v-message-icon v-icon v-icon-low v-icon-success v-icon-visa"
      focusable="false"
      height="24"
      id="a-v__icon__internal-18"
      role="img"
      v-icon-visa-success-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M10.5726 14.2094L8.36276 11.9469L7 13.3422L10.5726 17L18 9.39529L16.6372 8L10.5726 14.2094Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C5.38317 0 0 5.38317 0 12C0 18.6168 5.38317 24 12 24C18.6168 24 24 18.6168 24 12C24 5.38317 18.6168 0 12 0ZM12 21.8182C6.58647 21.8182 2.18182 17.4141 2.18182 12C2.18182 6.58647 6.58647 2.18182 12 2.18182C17.4141 2.18182 21.8182 6.58647 21.8182 12C21.8182 17.4141 17.4141 21.8182 12 21.8182Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the banner in more detail.
      </p>
    </div>
  </div>
</div>
`;

exports[`Banner examples SuccessTitleBannerComponent should render correctly 1`] = `
<div
  id="root15"
>
  <div
    class="v-banner v-message v-message-success"
    messagetype="success"
    v-banner=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="v-message-icon v-icon v-icon-low v-icon-success v-icon-visa"
      focusable="false"
      height="24"
      id="a-v__icon__internal-19"
      role="img"
      v-icon-visa-success-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M10.5726 14.2094L8.36276 11.9469L7 13.3422L10.5726 17L18 9.39529L16.6372 8L10.5726 14.2094Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C5.38317 0 0 5.38317 0 12C0 18.6168 5.38317 24 12 24C18.6168 24 24 18.6168 24 12C24 5.38317 18.6168 0 12 0ZM12 21.8182C6.58647 21.8182 2.18182 17.4141 2.18182 12C2.18182 6.58647 6.58647 2.18182 12 2.18182C17.4141 2.18182 21.8182 6.58647 21.8182 12C21.8182 17.4141 17.4141 21.8182 12 21.8182Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <h4
        class="v-typography-body-2-bold"
        vtypography="body-2-bold"
      >
        Success title
      </h4>
      <p>
        This is required text that describes the banner in more detail.
      </p>
    </div>
    <button
      aria-label="close"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-16 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-16"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        id="a-v__icon__internal-20"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Banner examples WarningBannerBannerComponent should render correctly 1`] = `
<div
  id="root23"
>
  <div
    class="v-banner v-message v-message-warning"
    messagetype="warning"
    v-banner=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="v-message-icon v-icon v-icon-low v-icon-visa v-icon-warning"
      focusable="false"
      height="24"
      id="a-v__icon__internal-34"
      role="img"
      v-icon-visa-warning-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M24 23H0V20.64L11.41 0H13.72L24 20.66V23ZM2.08 21H21.93L12.53 2.1L2.08 21Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11.5 8.00195H13.5V15.002H11.5V8.00195ZM11.5 17.002H13.5V19.002H11.5V17.002Z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the banner in more detail.
      </p>
    </div>
    <button
      aria-label="close"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-16 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-16"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        id="a-v__icon__internal-35"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Banner examples WarningBannerWithActionButtonBannerComponent should render correctly 1`] = `
<div
  id="root21"
>
  <div
    class="v-banner v-message v-message-warning"
    messagetype="warning"
    v-banner=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="v-message-icon v-icon v-icon-low v-icon-visa v-icon-warning"
      focusable="false"
      height="24"
      id="a-v__icon__internal-30"
      role="img"
      v-icon-visa-warning-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M24 23H0V20.64L11.41 0H13.72L24 20.66V23ZM2.08 21H21.93L12.53 2.1L2.08 21Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11.5 8.00195H13.5V15.002H11.5V8.00195ZM11.5 17.002H13.5V19.002H11.5V17.002Z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the banner in more detail.
      </p>
      <button
        buttoncolor="secondary"
        class="v-button v-button-secondary v-mt-8"
        type="button"
        v-button=""
        vmt="8"
      >
        Primary action
      </button>
    </div>
    <button
      aria-label="close"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-16 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-16"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        id="a-v__icon__internal-31"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Banner examples WarningBannerWithLinkBannerComponent should render correctly 1`] = `
<div
  id="root22"
>
  <div
    class="v-banner v-message v-message-warning"
    messagetype="warning"
    v-banner=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="v-message-icon v-icon v-icon-low v-icon-visa v-icon-warning"
      focusable="false"
      height="24"
      id="a-v__icon__internal-32"
      role="img"
      v-icon-visa-warning-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M24 23H0V20.64L11.41 0H13.72L24 20.66V23ZM2.08 21H21.93L12.53 2.1L2.08 21Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11.5 8.00195H13.5V15.002H11.5V8.00195ZM11.5 17.002H13.5V19.002H11.5V17.002Z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p
        class="v-pb-8"
        vpb="8"
      >
        This is required text that describes the banner in more detail.
      </p>
      <a
        href="./components/banner"
        vlink=""
      >
        Destination label
      </a>
    </div>
    <button
      aria-label="close"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-16 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-16"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        id="a-v__icon__internal-33"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Banner examples WarningPersistentBannerComponent should render correctly 1`] = `
<div
  id="root19"
>
  <div
    class="v-banner v-message v-message-warning"
    messagetype="warning"
    v-banner=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="v-message-icon v-icon v-icon-low v-icon-visa v-icon-warning"
      focusable="false"
      height="24"
      id="a-v__icon__internal-27"
      role="img"
      v-icon-visa-warning-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M24 23H0V20.64L11.41 0H13.72L24 20.66V23ZM2.08 21H21.93L12.53 2.1L2.08 21Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11.5 8.00195H13.5V15.002H11.5V8.00195ZM11.5 17.002H13.5V19.002H11.5V17.002Z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <p>
        This is required text that describes the banner in more detail.
      </p>
    </div>
  </div>
</div>
`;

exports[`Banner examples WarningTitleBannerComponent should render correctly 1`] = `
<div
  id="root20"
>
  <div
    class="v-banner v-message v-message-warning"
    messagetype="warning"
    v-banner=""
    v-message=""
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="v-message-icon v-icon v-icon-low v-icon-visa v-icon-warning"
      focusable="false"
      height="24"
      id="a-v__icon__internal-28"
      role="img"
      v-icon-visa-warning-low=""
      v-message-icon=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M24 23H0V20.64L11.41 0H13.72L24 20.66V23ZM2.08 21H21.93L12.53 2.1L2.08 21Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11.5 8.00195H13.5V15.002H11.5V8.00195ZM11.5 17.002H13.5V19.002H11.5V17.002Z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
      v-message-content=""
      vpb="2"
      vpl="2"
    >
      <h4
        class="v-typography-body-2-bold"
        vtypography="body-2-bold"
      >
        Warning title
      </h4>
      <p>
        This is required text that describes the banner in more detail.
      </p>
    </div>
    <button
      aria-label="close"
      buttoncolor="tertiary"
      buttonsize="small"
      class="v-button v-button-icon v-button-small v-button-subtle v-button-tertiary -v-mr-16 -v-mt-8"
      subtle=""
      type="button"
      v-button-icon=""
      vmr="-16"
      vmt="-8"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-close v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        id="a-v__icon__internal-29"
        v-icon-visa-close-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M7.99995 9.4149L13.9497 15.3646L15.3639 13.9504L9.41417 8.00069L15.3639 2.05094L13.9497 0.636723L7.99995 6.58647L2.0502 0.636719L0.635986 2.05093L6.58574 8.00069L0.635993 13.9504L2.05021 15.3646L7.99995 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;
